--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,26 +1,45 @@
 <div class="hero">
 
-
     <!-- Contenido de tu página aquí -->
     <div class="row ">
-        <section id="hero" class="d-flex align-items-center image-bg">
+        <section id="hero" class="d-flex align-items-center image-bg py-1">
             <div class="container custom-row">
                 <div class="row justify-content-between ">
                     <div
                         class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-                        <h2 data-aos="zoom-out">¡Hola! Bienvenido, soy: <br> <span class="text-gradient">Jehiel
-                                Linarez</span>
+
+                        <div class="typewriter">
+                            <h1>¡Hola! Bienvenido, soy:</h1>
+                        </div>
+                        <h2 data-aos="zoom-out">
+                            <<span class="text-gradient">Jehiel
+                                Linarez</span>/>
                         </h2>
                         <h3>Desarrollador web</h3>
-                        <p data-aos="fade-up" data-aos-delay="200">En bitebooking, puedes llevar lo mejor de tu
-                            Gastronomía a
-                            tus clientes, sabemos lo importante que es ofrecer tus productos, con nosotros cuentas
-                            con una sección dedicada a promocionar lo mejor de tu cocina.</p>
+                        <p data-aos="fade-up" data-aos-delay="200">Me dedico al desarrollo de aplicaciones web, en este
+                            portfolio podras encontrar de manera mas detallada, mis proyectos, estudios, futuros
+                            emprendimientos y probablemente encontraras mas de una manera de comunciarte conmigo, me
+                            encuentro sumergido en mis estudios y el mundo de la tecnología con la finalidad de conectar
+                            el sector hostelero con la tecnología.</p>
+                        <div class="buttons">
+                            <button routerLink="projects-list">
+                                <span> Go to my LinkedIn
+                                </span>
+                            </button>
+                            <button class="ms-5">
+                                <span> Resume
+                                </span>
+                            </button>
+                        </div>
+
                     </div>
+
                     <div class="col-lg-5">
                         <img src="https://media.licdn.com/dms/image/D4D03AQHzgbxlBXh0mw/profile-displayphoto-shrink_800_800/0/1712954050224?e=1720051200&v=beta&t=5DgHK696p0V1MAirQ2g47-SKBfX5zCltGX8b1ffSouQ"
                             class="img-fluid custom-photo" alt="" data-aos="zoom-out" data-aos-delay="300">
                     </div>
+
+
                 </div>
             </div>
         </section>
@@ -28,7 +47,68 @@
 
 </div>
 
+
+
+
+<div class="container-fluid">
+
+    <div class="row justify-content-center">
+        <div class="horizontal-bars"></div>
+        <h1 class="text-center mb-5 roboto-medium-italic mt-5">Conoce mis proyectos.</h1>
+        <div class="col">
+            <a href="https://bitebooking-frontend-oqb5.vercel.app/home-logout">
+                <div class="card" data-aos="fade-up"
+                    style="background-image: url('https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png');">
+                    <svg viewBox="0 0 24 24"
+                        xmlns="https://i.ibb.co/d2mNPpP/Captura-de-pantalla-2024-04-28-111137.png"></svg>
+                    <div class="card__content">
+                        <p class="card__title">BiteBooking.</p>
+                        <p class="card__description">Plataforma destinada a la gestion de reservas en el sector de
+                            hostelería, fue desarrollada full stack por el equipo de Fundación Adecco. Cuenta con
+                            tecnologias como Java Spring para el backend y Angular para el Frontend.</p>
+                    </div>
+                </div>
+            </a>
+
+
+        </div>
+        <div class="col">
+            <a href="https://jehiell.github.io/landing-page-curso/">
+                <div class="card " data-aos="fade-up"
+                    style="background-image: url('https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png');">
+                    <svg viewBox="0 0 24 24"
+                        xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
+                    <div class="card__content">
+                        <p class="card__title">Curso Landing page.</p>
+                        <p class="card__description mb-1">Realizado al principio del curso, su finalidad es simple, pero poderosa, conectar todos los proyectos al terminar el curso, todos los estudiantes de la fundación Adecco estan invitados a participar.</p>
+                    </div>
+                </div>
+            </a>
+
+        </div>
+        <div class="col">
+            <a href="https://jehiell.github.io/">
+                <div class="card"
+                    style="background-image: url('https://i.ibb.co/fFPNtxy/Captura-de-pantalla-2024-04-30-171615.png');"
+                    data-aos="fade-up">
+                    <svg viewBox="0 0 24 24"
+                        xmlns="https://i.ibb.co/jyWYGnM/Captura-de-pantalla-2024-04-30-155108.png"></svg>
+                    <div class="card__content">
+                        <p class="card__title">Antiguo Portfolio.</p>
+                        <p class="card__description">Te presento mi antiguo portfolio, realizado con HTML, Css y
+                            Javascript, fue mi primer projecto dentro del desarrollo web, fue realizado de manera
+                            empiríca, animado por un nuevo mundo que se habría paso.</p>
+                    </div>
+                </div>
+            </a>
+
+        </div>
+    </div>
+</div>
+
+
 <div class="slider">
+
     <div class="slide-track">
         <div class="slide">
             <img src="https://avatars1.githubusercontent.com/u/139426?s=280&v=4" alt="">
@@ -67,52 +147,154 @@
     </div>
 </div>
 
+
+
 <div data-aos="fade-up" class="counts container">
-    <div class="row">
-        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+    <div class="horizontal-bars mt-5"></div>
+    <h1 class="text-center  roboto-medium-italic mt-5">Habilidades, estudios & futuros proyectos.</h1>
+    <div class="row text-center  justify-content-center">
+
+        <div class="col-lg-3 col-md-6 mt-5 mx-3">
             <div class="count-box">
                 <i class="bi bi-bricks"></i>
                 <strong>Frontend skills.</strong>
+
+
+                <p>Solidos conocimientos en desarrollo frontend, los ultimos 6 meses me he mantenido inmerson en el
+                    desarrollo de aplicaciones web fon el framework Angular y el motor de estilos Bootstrap, de la mano
+                    de <span>Certidevs</span> he logrado adquirir a profundidad los conocimientos necesarios para
+                    desarrollarme en puestos de desarrollo UX/IX, Frontend.</p>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-6 mt-5 mx-3">
+            <div class="count-box">
+                <i class="bi bi-robot"></i>
+                <strong>Backend skills.</strong>
                 <p>Desde lo tecnológico brindando soporte a mis compañeros, realizando e implementando metodos,
                     funciones,
-                    arquitectuzra de software, desarrollo de producto, UI/UX, liderando y apoyando las distintas
+                    arquitectura de software, Validaciones de usuarios, Servicios, liderando y apoyando las distintas
                     etapas del
-                    desarrollo de BiteBooking.</p>
+                    desarrollo de BiteBooking, logre adquirir habilidades en creación de servicios con la tecnología
+                    Spring boot de Java.</p>
             </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+        <div class="col-lg-3 col-md-6 mt-5">
             <div class="count-box">
-                <i class="bi bi-kanban"></i>
-                <strong>Backend Skills.</strong>
-                <p>Construir una Fuerte red laboral que me permita llevar adelante emprendimientos relacionados a la
-                    hostelería, mi meta es muy simple, quiero llevar la hostelería y la teconología a un terreno
-                    donde se puedan encontrar, </p>
+                <i class="bi bi-bricks"></i>
+                <strong>Soft skills.</strong>
+                <p class="mb-3">Con una solida trayectoría dentro de la hostelería, logrando hitos significativos como
+                    miembro fundador de franquicias <a href="www.oh-toro.com"
+                        style="text-decoration: none; color:red; font-weight: bold;">Oh-Toro</a>, he logrado desarrollar
+                    habilidades que me permiten relacionarme y trabajar en equipo, siendo uno de los pilares
+                    fundamentales en mi trayectoria laboral.
+                </p>
             </div>
-        </div>
-        <div class="col-lg-3 col-md-6">
-            <div class="count-box">
-                <i class="bi bi-highlighter"></i>
-                <strong>Futuros Estudios</strong>
-                <p class="custom-p">Inmerso completamente en la tecnología, este año he sido aceptado como
-                    estudiante del
-                    innovador campus 42 Madrid fundación Telefonica, sera una de las distintas herramientas que
-                    utilizare para
-                    continuar mi crecimiento profesional.</p>
-            </div>
+            <br>
         </div>
 
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-                <i class="bi bi-person-workspace"></i>
-                <strong>Perfil laboral</strong>
-                <ul>
-                    <li>Full Stack Developer</li>
-                    <li>Java Backend Developer</li>
-                    <li>Angular Frontend Developer</li>
-                    <li>UI/UX</li>
-                </ul>
-            </div>
-        </div>
+
     </div>
 </div>
+
+
+<div class="container marketing" style="background-color: #f9f9f9; padding:50px;">
+
+    <div class="row featurette">
+        <div class="col-md-8">
+            <h2 class="featurette-heading fw-normal mt-5">Futuros estudios. <span class="text-body-secondary">Up to
+                    you.</span></h2>
+            <p class="lead">Comprometido con mi crecimiento y estudios, este año 2024, he participado en las conocidas
+                <a href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
+                    Piscinas</a>, del prestigioso campus 42 de Fundación Telefonica, donde me encuentro desarrollando
+                habilidades en el lenguaje C, como lo son: algoritmos, creación de funciones, gestión de memoría, linux,
+                cyberseguridad y muchisimos otros excitantes proyectos, te recomiendo visitar mi ultimo proyecto
+                realizado en <strong>42.</strong></p>
+
+            <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-dark">Visitar ultimo proyecto
+                    realizado.</button></a>
+        </div>
+        <div class="col-md-4 mt-5" data-aos="fade-up">
+            <img src="https://jobinplanet.com/media/83659" alt="" style="max-width: 380px;">
+        </div>
+    </div>
+    
+    <hr class="featurette-divider">
+
+    <div class="row featurette ">
+        <div class="col-md-6 order-md-2">
+            <h2 class="featurette-heading fw-normal lh-1">Master en desarrollo de aplicaciones web. <span
+                    class="text-body-secondary">Una meta mas alcanzada.</span></h2>
+            <p class="lead">Desde el año 2023 me encuentro sumergido en un master intensivo de desarrollo web, este fue
+                impartido por <a href="https://certidevs.com/"
+                    style="text-decoration: none; color:black; font-weight: 500;"> Certidevs</a>, en el cual hemos
+                contado con la participación de Alan sastre como instructor, el cual ha garantizado mediante su
+                plataforma, evaluado a traves de inteligencia artificial, que hemos completado satisfactoriamente la
+                formación que nos permite acceder al mundo laboral.</p>
+            <button class="btn btn-outline-dark">Conoce mis certificados aprobados.</button>
+
+        </div>
+
+        <div class="col-md-6 order-md-1 justify-content-center align-items-center " data-aos="fade-up">
+            <img src="https://i.ibb.co/RyPf8fF/certidevs-portada-formacion-removebg-preview.png" alt=""
+                style="max-width: 200px;">
+            <img src="https://fundacionadecco.org/wp-content/uploads/2017/05/logo-fundacion-adecco-discapacidad.png"
+                alt="" style="max-width: 200px;">
+        </div>
+    </div>
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+        <div class="col-md-8">
+            <h2 class="featurette-heading fw-normal ">Futuros proyectos. <span class="text-body-secondary">Tech Chef.</span></h2>
+            <p class="lead">Apostando por el talento, mis creencias y afianzado en que el futuro es ahora, he decidido fundar 
+                <a href="https://www.42madrid.com/" style="text-decoration: none; font-weight: 600; color:black">
+                    Tech Chef</a>, junto a mi socia y esposa <a href="https://www.linkedin.com/in/maria-laura-asuaje-palmero-94a00380/" style="text-decoration: none; font-weight: 600;" class="text-gradient">Maria Laura Asuaje</a>, con el objetivo de avanzar el proceso de digitalización de la hostelería en España, realizando investigaciones y desarrolloes que lleven a una economía mas sostenible, apoyando y asesorando al pequeño comercio.</p>
+
+            <a href="https://github.com/JehielL/libft"><button class="btn btn-outline-danger">Desde aquí podras visitar nuestro blog.</button></a>
+        </div>
+        <div class="col-md-4 " data-aos="fade-up">
+            <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 350px;">
+        </div>
+    </div>
+
+</div>
+
+
+<section id="contacto" data-aos-duration="2000">
+    <div class="form-container">
+        <div class="form">
+
+            <h3 class="titulo-seccion   p-2 text-center">Contáctame ahora</h3>
+            <div class="form-group">
+                <form action="https://formsubmit.co/jehiel.py@gmail.com" method="POST">
+
+                    <div class="labels">
+                        <input type="text" name="name" id="name" placeholder="Nombre Completo" class="input-mitad"
+                            required>
+                        <br>
+                        <input type="email" name="email" id="email" placeholder="Dirección de Email" class="input-mitad"
+                            required>
+
+
+                        <input type="text" name="subject" id="subject" placeholder="Asunto..." class="input-full">
+
+
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Tu Mensaje..."
+                            class="input-full" required></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-outline-dark">Enviar Mensaje</button>
+
+                    </div>
+                    <input type="hidden" name="_next" value="http://localhost:4200/">
+                    <input type="hidden" name="_captcha" value="false">
+                </form>
+
+            </div>
+
+        </div>
+    </div>
+
+
+</section>
