--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md bg-custom">
     <div class="container-fluid">
       <a >
-        <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 70px;">
+        <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 100px;">
       </a>
   
       <div class="loader">
@@ -51,10 +51,10 @@
   
       
           
-     
-          <button routerLink="user/login" type="button" class="btn btn-login"  > <i class="bi bi-github"></i>
+        <a href="https://github.com/JehielL"><button type="button" class="btn btn-login"  > <i class="bi bi-github"></i>
             
-            Go My github</button>
+          My github</button></a>
+          
           
             
       </div>
