--- a/src/app/projects-list/projects-list.component.html
+++ b/src/app/projects-list/projects-list.component.html
@@ -1,1 +1,123 @@
-<p>projects-list works!</p>
+<div class="parallax">
+
+    <div class="text-secondary text-center" style="background-color: transparent;" >
+        <div class="py-5">
+            <h1 class="display-5 fw-bold text-gradient">Mis Certificados de Estudio</h1>
+            <div class="col-lg-3 mx-auto">
+                <p class="fs-5 mb-4">En esta sección podras hacer un mapeo temporal de mi recorrido como estudiante, desde certificados ordenados en orden cronologico, podras observas mas detalladamente mis skills, habilidades y los cursos que he completado </p>
+                <div class="d-grid  justify-content-sm-center">
+                    <button type="button" class="btn btn-outline-info btn-lg   fw-bold">Volver al inicio</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="container">
+
+    <div class="row p-3">
+        <div class="card p-3 m-3" style="width: 18rem; ">
+            <img src="https://i.ibb.co/s6KMcQG/Captura-de-pantalla-2024-05-01-033144.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Base de datos MySql</h5>
+                <p class="card-text">Estudio de sintaxis sql, consultas avanzadas, claves foraneasm, Joins.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 10/10</li>
+            </ul>
+
+        </div>
+        <div class="card p-3 m-3" style="width: 18rem;">
+            <img src="https://i.ibb.co/vsqgG9Z/Captura-de-pantalla-2024-05-01-035354.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Css, Html, Js.</h5>
+                <p class="card-text">Sintaxis, manejo de promesas, programación orientada a objeto, estilos cascada,
+                    bootstrap como principal motor de plantillas. claves foraneas.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 8/10</li>
+            </ul>
+
+        </div>
+        <div class="card p-3 m-3" style="width: 18rem;">
+            <img src="https://i.ibb.co/K2zFWg8/Captura-de-pantalla-2024-05-01-141417.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Python</h5>
+                <p class="card-text">programación orientada a objetos, metodos, sintaxis, fundamentos de automatización
+                    de sistemas.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 10/10</li>
+            </ul>
+
+        </div>
+        <div class="card p-3 m-3" style="width: 18rem;">
+            <img src="https://i.ibb.co/M1jS7tS/Captura-de-pantalla-2024-05-01-140851.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Introducción al Desarrollo Java</h5>
+                <p class="card-text">POO, Metodos constructores, getter, setter, desarrollo de API REST, con JPA, Spring
+                    boot.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 7/10</li>
+            </ul>
+
+        </div>
+        <div class="card p-3 m-3" style="width: 18rem;">
+            <img src="https://i.ibb.co/wLzgvMJ/Captura-de-pantalla-2024-05-01-141910.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Control de versiones Git.</h5>
+                <p class="card-text">Comandos, uso de sistemas de control de versiones, uso avanzado de github como
+                    plataforma, github pages, github Desktop.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 10/10</li>
+            </ul>
+
+        </div>
+        <div class="card p-3 m-3" style="width: 18rem;">
+            <img src="https://i.ibb.co/rbFx1Xs/Captura-de-pantalla-2024-05-01-142147.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Fundamentos de la programación.</h5>
+                <p class="card-text">Conceptos basicos sobre paradigmas de programación orientado a objetos, funcional,
+                    tipos de datos, algoritmos, listas, metodos y funciones.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>30</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 10/10</li>
+            </ul>
+
+        </div>
+        <div class="card p-3 m-3" style="width: 18rem;">
+            <img src="https://i.ibb.co/nzvr60f/Captura-de-pantalla-2024-05-01-142610.png" class="card-img-top"
+                alt="Chicago Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">Google crash course on Python</h5>
+                <p class="card-text">Automatización de sistemas , tareas y funciones basado en scripting con sintaxis de
+                    python, metodos, registros de usuarios, logs, control de accesos.</p>
+            </div>
+            <ul class="list-group list-group-light list-group-small">
+                <li class="list-group-item px-4"><strong>Horas: </strong>100</li>
+                <li class="list-group-item px-4"><strong>Nota final:</strong> 7/10</li>
+            </ul>
+
+        </div>
+
+
+
+    </div>
+</div>
