--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,64 +1,64 @@
 .footer-custom {
-    background-color: #202030;
-    color: #aaaaaa !important;
-    text-align: center; /* Centra el contenido del footer */
-    padding: 30px;
-    position: static;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+  background-color: #202030;
+  color: #aaaaaa !important;
+  text-align: center; 
+  padding: 30px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* Asegura que el footer esté por encima del contenido */
+}
+
+/* Estilos adicionales específicos del footer */
+.footer-custom .nav li a {
+  color: #ffffff;
+}
+
+.nav-item {
+  color: #ffffff !important;
+}
+
+.footer-custom a {
+  background-color: #202030;
+  color: #dcdcdc !important;
+  transition: all 0.5s;
+  font-weight: bold;
+}
+
+.footer-custom h5 {
+  background-color: #202030;
+  color: #f9f9f9 !important;
+  transition: all 0.5s;
+}
+
+.footer-custom a:hover {
+  color: #710216 !important;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 576px) {
+  .footer-custom {
+      padding: 20px;
   }
-  
-  .footer-custom .nav li a {
-    color: #ffffff;
-  }
-  
-  .nav-item {
-    color: #ffffff !important;
-  }
-  
-  .footer-custom a {
-    background-color: #202030;
-    color: #dcdcdc !important;
-    transition: all 0.5s;
-    font-weight: bold;
-  }
-  
+
   .footer-custom h5 {
-    background-color: #202030;
-    color: #f9f9f9 !important;
-    transition: all 0.5s;
+      font-size: 18px;
+      margin-bottom: 10px;
   }
-  
-  .footer-custom a:hover {
-    color: #710216 !important;
+
+  .footer-custom p {
+      font-size: 16px;
+      margin-bottom: 10px;
   }
-  
-  /* Media query para dispositivos móviles */
-  @media (max-width: 576px) {
-    .footer-custom {
-        padding: 20px;
-    }
-  
-    .footer-custom h5 {
-        font-size: 18px;
-        margin-bottom: 10px;
-    }
-  
-    .footer-custom p {
-        font-size: 16px;
-        margin-bottom: 10px;
-    }
-  
-    .footer-custom .btn {
-        font-size: 12px;
-        padding: 8px 16px;
-        margin-top: 50px;
-    }
-  
-    .footer-custom .nav li a {
-        font-size: 12px;
-        align-items: center;
-    }
+
+  .footer-custom .btn {
+      font-size: 12px;
+      padding: 8px 16px;
+      margin-top: 50px;
   }
-  
+
+  .footer-custom .nav li a {
+      font-size: 12px;
+      align-items: center;
+  }
+}
